--- a/week9/finance/templates/login.html
+++ b/week9/finance/templates/login.html
@@ -7,11 +7,11 @@
 {% block main %}
     <form action="/login" method="post">
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
+            <input type="text" name="username" placeholder="Username" autocomplete="OFF">
         </div>
         <div class="form-group">
-            <input class="form-control" name="password" placeholder="Password" type="password">
+            <input type="password" name="password" placeholder="Password" autocomplete="OFF">
         </div>
-        <button class="btn btn-primary" type="submit">Log In</button>
+        <button type="submit" class="btn">Log In</button>
     </form>
 {% endblock %}
