--- a/week9/finance/templates/quote.html
+++ b/week9/finance/templates/quote.html
@@ -1,13 +1,15 @@
 {% extends "layout.html" %}
 
-{% blcok title %}Quote{% endblock %}
+{% blcok title %}
+Quote
+{% endblock %}
 
 {% block main %}
     <form action="/quote" method="post">
-        <div vlass="form-group">
+        <div>
             <h1>gimme the name of the stock you wanna look at</h1>
             <input type="text", placeholder="Stock", name="symbol", autocomplete="off" autofocus>
         </div>
-        <button type="submit">Get Quote</button>
+        <button type="submit" class="btn">Get Quote</button>
     </form>
 {% endblock %}
