--- a/week9/finance/templates/register.html
+++ b/week9/finance/templates/register.html
@@ -1,22 +1,18 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Log In
+Log In
 {% endblock %}
 
 {% block main %}
     <form action="/register" method="post">
-        <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
-        </div>
-        <div class="form-group">
-            <input class="form-control" name="password" placeholder="Password" type="password">
-        </div>
 
-        <div class="form-group">
-            <input class="form-control" name="confirmation" placeholder="Confirm Password" type="password">
-        </div>
+        <div><input type="text" name="username" placeholder="Username" autocomplete="OFF"></div> <br>
 
-        <button class="btn btn-primary" type="submit">Sign In</button>
+        <div><input type="password" name="password" placeholder="Password"></div> <br>
+
+        <div><input type="password" name="confirmation" placeholder="Confirm Password"></div><br>
+
+        <button type="submit" class="btn">Sign In</button>
     </form>
 {% endblock %}
