--- a/week9/finance/templates/history.html
+++ b/week9/finance/templates/history.html
@@ -18,9 +18,9 @@ History
         {% for line in history %}
 
         <tr>
-            <td>{{ history["Symbol"] }}</td>
-            <td>{{ history["Shares"] }}</td>
-            <td>{{ history["Price"] }}</td>
+            <td>{{ line["Symbol"] }}</td>
+            <td>{{ line["Shares"] }}</td>
+            <td>{{ line["Price"] }}</td>
         </tr>
 
         {% endfor %}
