--- a/week9/finance/templates/index.html
+++ b/week9/finance/templates/index.html
@@ -1,29 +1,50 @@
 {% extends "layout.html" %}
 
+{% block title %}
+    Account Overview
+{% endblock %}
+
 {% block main %}
+    <div class="container">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">Symbol</th>
+                    <th scope="col">Shares</th>
+                    <th scope="col">Quote</th>
+                    <th scope="col">Total</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!--{% for stock in stocks %}-->
+                <!--solution from stockoverflow changed above-->
+                <tr>
+                <!--{% for stock in stocks %}-->
+                {{ for stock in stocks }}
+                    <td>{{ stock["symbol"] }}</td>
+                    <td>{{ stock["shares"] }}</td>
+                    <td>{{ stock["quote"] }}</td>
+                    <td>{{ stock["total"] }}</td>
+                {% endfor %}
+                </tr>
 
-<table>
-    <thead>
-        <tr>
-            <th>Symbol</th>
-            <th>Shares</th>
-            <th>Price</th>
-            <th>Total</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            {% for stock in stocks %}
-            <td>{{ stock["Symbol"] }}</tb>
-            <td>{{ stock["Shares"] }}</tb>
-            <td>{{ stock["Price"] }}</tb>
-            <td>{{ stock["Total"] }}</tb>
-            {% endfor %}
-        </tr>
-        <tr>Balance</tr>
-            <td>{{ balance }}</td>
-        </tr>
-    </tbody>
-</table>
-
+                <tr>
+                    <td>VALUE</td>
+                    <td colspan="2"></td>
+                    <td>{{ value }}</td>
+                </tr>
+                <tr>
+                    <td>CASH</td>
+                    <td colspan="2"></td>
+                    <td>{{ balance }}</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="3"></td>
+                    <td>{{ assets }}</td>
+                </tr>
+            </tfoot>
+        </table>
+   </div>
 {% endblock %}
