--- a/week9/finance/templates/history.html
+++ b/week9/finance/templates/history.html
@@ -6,25 +6,26 @@ History
 
 {% block main %}
 
-<table>
-    <thead>
-        <tr>
-            <th>Symbol</th>
-            <th>Shares</th>
-            <th>Price</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for line in history %}
-
-        <tr>
-            <td>{{ line["Symbol"] }}</td>
-            <td>{{ line["Shares"] }}</td>
-            <td>{{ line["Price"] }}</td>
-        </tr>
-
-        {% endfor %}
-    </tbody>
-</table>
+    <div class="container">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">Symbol</th>
+                    <th scope="col">Shares</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Time</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for row in history %}
+                    <tr>
+                        <td>{{ row["Symbol"] }}</td>
+                        <td>{{ row["Shares"] }}</td>
+                        <td>{{ row["Price"] }}</td>
+                        <td>{{ row["Timestamp"] }}</td>
+                    </tr>
+                {% endfor %}
+        </table>
+   </div>
 
 {% endblock %}
