--- a/week9/finance/templates/login.html
+++ b/week9/finance/templates/login.html
@@ -7,7 +7,7 @@
 {% block main %}
     <form action="/login" method="post">
         <div class="form-group">
-            <input type="text" name="username" placeholder="Username" autocomplete="OFF">
+            <input type="text" name="username" placeholder="Username" autocomplete="OFF" autofocus>
         </div>
         <div class="form-group">
             <input type="password" name="password" placeholder="Password" autocomplete="OFF">
