--- a/week9/finance/templates/register.html
+++ b/week9/finance/templates/register.html
@@ -1,18 +1,20 @@
 {% extends "layout.html" %}
 
 {% block title %}
-Log In
+    Register
 {% endblock %}
 
 {% block main %}
     <form action="/register" method="post">
-
-        <div><input type="text" name="username" placeholder="Username" autocomplete="OFF"></div> <br>
-
-        <div><input type="password" name="password" placeholder="Password"></div> <br>
-
-        <div><input type="password" name="confirmation" placeholder="Confirm Password"></div><br>
-
-        <button type="submit" class="btn">Sign In</button>
+        <div class="form-group">
+            <input name="username" placeholder="Username" type="text" autocomplete="off" autofocus class="form-control">
+        </div>
+        <div class="form-group">
+            <input name="password" placeholder="Password" type="password" class="form-control">
+        </div>
+        <div class="form-group">
+            <input name="confirmation" placeholder="Confirmation" type="password" class="form-control">
+        </div>
+        <button class="btn btn-primary" type="submit">Register</button>
     </form>
 {% endblock %}
