--- a/week9/finance/templates/sell.html
+++ b/week9/finance/templates/sell.html
@@ -1,24 +1,12 @@
 {% extends "layout.html" %}
 
 {% block title %}
-Sell
+    Register
 {% endblock %}
 
-{% block main %}
-    <form action="/sell" method="post">
-        <div class="form-group">
-            <Label for="symbol">Stock Name:</Label></br>
-            <select class="form-control custom-select" name="symbol" id="symbol" width="250">
-                {% for i in symbols %}
-                    <option>{{ i }}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <div class="form-group">
-            <Label for="shares">Share Quantity:</Label></br>
-            <input class="form-control" autocomplete="off" autofocus name="shares" id="shares" placeholder="Shares" width="250" type="text"/>
-        </div>
 
-        <button class="btn btn-info" type="submit">Sell shares</button>
-    </form>
+{% block main %}
+
+
+
 {% endblock %}
