--- a/week9/finance/templates/sell.html
+++ b/week9/finance/templates/sell.html
@@ -1,12 +1,24 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Register
+    Sell
 {% endblock %}
 
-
 {% block main %}
+<form action="/buy" method="post">
 
+    <div class="form-group">
+    <button type="button" class="btn btn-light">Symbol</button>
+    <input name="symbol" type="text" autofocus placeholder="Symbol" class="form-control">
+    </div>
 
+    <div class="form-group"><button type="button" class="btn btn-light">Shares</button>
+    <input name="shares" type="text" autofocus placeholder="Shares" class="form-control">
+    </div>
 
+    <br>
+
+    <button type="submit" class="btn btn-warning">Sell</button>
+
+</form>
 {% endblock %}
