--- a/week9/finance/templates/history.html
+++ b/week9/finance/templates/history.html
@@ -16,14 +16,16 @@
         </tr>
     </thead>
     <tbody>
-        <tr>
+        <!--<tr>-->
         {% for line in history %}
+        <tr>
             <td>{{ line["Symbol"] }}</td>
             <td>{{ line["Shares"] }}</td>
             <td>{{ line["Quote"] }}</td>
-            <td>{{ time["Time"] }}</td>
-        {% endfor %}
+            <td>{{ line["Time"] }}</td>
         </tr>
+        {% endfor %}
+        <!--</tr>-->
     </tbody>
 </table>
 
