--- a/week9/finance/templates/quote.html
+++ b/week9/finance/templates/quote.html
@@ -6,10 +6,14 @@
 
 {% block main %}
     <form action="/quote" method="post">
-        <div>
-            <h1></h1>
-            <input type="text", placeholder="Enter the ticker symbol of a stock", name="symbol", autocomplete="off" autofocus>
+        <!--<button type="button" class="btn btn-light">Enter the symbol of a stock</button>-->
+        <h5>Enter the symbol of a stock</h5>
+        <br>
+
+        <div class="form-group">
+            <input type="text", placeholder="", name="symbol", autocomplete="off" autofocus class="form-control">
         </div>
-        <button type="submit" class="btn">Get Quote</button>
+
+        <button type="submit" class="btn btn-warning">Get Quote</button>
     </form>
 {% endblock %}
