--- a/week9/finance/static/styles.css
+++ b/week9/finance/static/styles.css
@@ -45,3 +45,7 @@ main img
     /* Constrain images on small screens */
     max-width: 100%;
 }
+
+/*table th {*/
+/*    style="text-align:left";*/
+/*}*/
