--- a/week9/finance/templates/history.html
+++ b/week9/finance/templates/history.html
@@ -10,6 +10,7 @@
     <thead>
         <tr>
             <th scope="col">Symbol</th>
+            <th scope="col">Name</th>
             <th scope="col">Shares</th>
             <th scope="col">Quote</th>
             <th>Time</th>
@@ -20,6 +21,7 @@
         {% for line in history %}
         <tr>
             <td>{{ line["Symbol"] }}</td>
+            <td>{{ line["Name"] }}</td>
             <td>{{ line["Shares"] }}</td>
             <td>{{ line["Quote"] }}</td>
             <td>{{ line["Time"] }}</td>
