--- a/week9/finance/templates/buy.html
+++ b/week9/finance/templates/buy.html
@@ -9,7 +9,7 @@
 
     <div class="form-group">
     <button type="button" class="btn btn-light">Symbol</button>
-    <input name="symbol" type="text" autofocus placeholder="Symbol" class="form-control">
+    <input name="symbol" type="text" autofocus placeholder="Symbol" class="form-control" autocomplete="off">
     </div>
 
     <div class="form-group"><button type="button" class="btn btn-light">Shares</button>
